--- a/css/nino.css
+++ b/css/nino.css
@@ -25,20 +25,23 @@ h3 {
 }
 .text {
 	width: 90%;
-	float: right
+	float: right;
 }
 .s-.row{
 	
 }
 .home{
-	margin-top: 1%;
+	margin: 10px;
 }
 .home span{
 	display: inline-block;
 	background-color: #FFD533;
-	width: 40px;
+	width: 60px;
 	height:20px;
 	margin-right: 5px;
+}
+.cover .home span{
+	background-color: #73C6B6;
 }
 .home a, .home a:hover{
 	display: inline-block;
