--- a/css/nino.css
+++ b/css/nino.css
@@ -1,4 +1,4 @@
-.cover body {
+.cover {
 	color: #fff;
 }
 h1,
@@ -17,7 +17,7 @@ h3 {
 }
 
 .cover {
-	background: url(../images/cover.jpg) no-repeat center center fixed;
+	background: url(../images/cover.jpg) #000 no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
