--- a/css/nino.css
+++ b/css/nino.css
@@ -20,6 +20,16 @@ h3 {
     font-size: 2rem;
 }
 
+.title {
+        margin-top: 50%
+    }
+
+@media(min-width: 40em) {
+    .title {
+        margin-top: 22%
+    }
+}
+
 .text {
     width: 90%;
     float: right;
@@ -57,12 +67,12 @@ h3 {
     background: linear-gradient(45deg, #FFD533, #73C6B6);
     min-height: 100px;
     width: 100% !important;
-   
     font-size: 1.6rem;
     padding: 30px 0 30px 0;
     margin-bottom: 50px;
 }
-.quoter{
+
+.quoter {
     font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
     font-weight: normal;
