--- a/css/nino.css
+++ b/css/nino.css
@@ -2,6 +2,33 @@
     color: #fff;
 }
 
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 40px;
+    left: 0;
+    padding: 1rem;
+}
+
+.contact {
+/*    border-top: 1px dotted #fff;*/
+    padding: 10px 0;
+}
+
+.contact a {
+    color: #fff;
+    margin-right: 30px;
+    text-decoration: none;
+}
+.about{
+    position: relative;
+    height: 100%;
+}
+
+.about .contact a {
+    color: #000 !important;
+}
+
 h1,
 h3 {
     font-family: 'Roboto', sans-serif;
@@ -21,8 +48,8 @@ h3 {
 }
 
 .title {
-        margin-top: 50%
-    }
+    margin-top: 50%
+}
 
 @media(min-width: 40em) {
     .title {
@@ -68,8 +95,12 @@ h3 {
     min-height: 100px;
     width: 100% !important;
     font-size: 1.6rem;
-    padding: 30px 0 30px 0;
+    padding: 50px 0 30px 0;
     margin-bottom: 50px;
+}
+
+hr.last {
+    padding-bottom: 100px;
 }
 
 .quoter {
