--- a/css/nino.css
+++ b/css/nino.css
@@ -3,9 +3,9 @@
 }
 
 footer {
-    position: absolute;
+    position: relative;
     right: 0;
-    bottom: 40px;
+    bottom: 20px;
     left: 0;
     padding: 1rem;
 }
@@ -99,8 +99,8 @@ h3 {
     margin-bottom: 50px;
 }
 
-hr.last {
-    padding-bottom: 100px;
+.last {
+    padding-bottom: 20px;
 }
 
 .quoter {
