--- a/css/nino.css
+++ b/css/nino.css
@@ -17,8 +17,13 @@ footer {
 
 .contact a {
     color: #fff;
-    margin-right: 30px;
+    margin-right: 6%;
     text-decoration: none;
+}
+@media(min-width: 40em) {
+    .contact a {
+        margin-right: 30px;
+    }
 }
 .about{
     position: relative;
@@ -112,4 +117,7 @@ h3 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
     font-weight: normal;
+}
+a.phone{
+    font-size: 100%;
 }
